Fix phase-banner gutter alignment

--- a/stylesheets/design-patterns/_alpha-beta.scss
+++ b/stylesheets/design-patterns/_alpha-beta.scss
@@ -3,7 +3,11 @@
 @import "../_shims";
 
 @mixin phase-banner($state: alpha) {
-  padding: 8px 0;
+  padding: 0.5em 2em;
+
+  @include media-down(mobile) {
+    padding: 0.5em 1em;
+  }
 
   @if $state == alpha {
     background-color: $alpha-colour;
@@ -14,10 +18,13 @@
   p {
     max-width: 960px;
     margin: 0 auto;
-    padding: 0 15px;
 
     color: $text-colour;
     @include core-16;
+
+    @include ie-lte(6) {
+      width: 960px;
+    }
   }
 
   a, a:link, a:visited, a:active {
